--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -36,5 +36,11 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+      - name: output contents
+        run: ls
       - name: Deploy
         run: echo "Deploying..."
