--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -46,6 +46,6 @@ jobs:
         with:
           name: dist-files
       - name: output filename
-        run: echo "${{ needs.build.outputs.script-file }}
+        run: echo "${{ needs.build.outputs.script-file }}"
       - name: Deploy
         run: echo "Deploying..."
