--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -19,7 +19,7 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     outputs:
-      script-file: ${{ steps.publish.outputs.script-file }}
+      output-script-filename: ${{ steps.publish.outputs.script-file }}
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -46,6 +46,6 @@ jobs:
         with:
           name: dist-files
       - name: output filename
-        run: echo "${{ needs.build.outputs.script-file }}"
+        run: echo "${{ needs.build.outputs.output-script-filename }}"
       - name: Deploy
         run: echo "Deploying..."
