simple env variable

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -3,8 +3,12 @@ on:
   push:
     branches:
       - main
+env:
+  MONGO_DB: gha-demo
 jobs:
   test:
+    env:
+      MONGO_DB_CLUSTER_ADDRESS: "some-address"
     runs-on: ubuntu-latest
     steps:
       - name: Get code
@@ -20,6 +24,8 @@ jobs:
         run: npm run lint
       - name: Test code
         run: npm run test
+      - name: print env variable defined in workflow
+        run: echo "env variable $MONGO_DB_CLUSTER_ADDRESS"
   build:
     needs: test
     runs-on: ubuntu-latest
